--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1150,7 +1150,6 @@ button, a { transition: var(--transition); }
   }
 
 
-
   /**
    * REUSED STYLE
    */
@@ -1236,7 +1235,7 @@ button, a { transition: var(--transition); }
 
   }
 
-
+  
 
   /**
    * REUSED STYLE
@@ -1644,4 +1643,32 @@ button, a { transition: var(--transition); }
 
   .footer-link-box { flex-basis: 700px; }
 
+}
+
+/* login form */
+
+.login-form {
+  width: 50%;
+  padding: 50px;
+  border-radius: 10px;
+  margin: auto;
+}
+
+.login-label {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.login-input {
+  width: 100%;
+  margin: 10px auto;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+@media (max-width: 767px) {
+  .login-form {
+    width: 100%;
+  }
 }
