--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1667,6 +1667,27 @@ button, a { transition: var(--transition); }
   border-radius: 10px;
 }
 
+.login-input[type="file"] {
+  width: 100%;
+  max-width: 100%;
+  color: #444;
+  padding: 10px;
+  background: #fff;
+  border-radius: 10px;
+  border: 2px solid #000;
+  cursor: pointer;
+}
+
+select {
+  width: 100%;
+  padding: 10px;
+  font-size: 18px;
+  border: 2px solid #000;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 @media (max-width: 767px) {
   .login-form {
     width: 100%;
