--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -597,3 +597,12 @@ body {
 		min-width: 420px;
 	}
 }
+
+
+.logout-btn {
+	border: none;
+	background-color: transparent;
+	border-radius: 0%;
+	width: 100%;
+	
+}
